correccion de error de ruta xaml

--- a/Servicios/Servicios/Views/PerfilCliente.xaml
+++ b/Servicios/Servicios/Views/PerfilCliente.xaml
@@ -1,19 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-    
-<naxam1:BottomTabbedPage
-    xmlns:naxam1="clr-namespace:Naxam.Controls.Forms;assembly=Naxam.BottomTabbedPage.Forms"
-    xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:Servicios.Views"
-    mc:Ignorable="d"
-             x:Class="Servicios.Views.PerfilCliente"
-             
-            >
-  <!--Pages can be added as references or inline-->
-  <ContentPage Title="Inicio" />
-  <ContentPage Title="Perfil" />
-  <ContentPage Title="Mensajes" />
-   <local:AboutPage Title="Mas" />
-</naxam1:BottomTabbedPage>
+             mc:Ignorable="d"
+             x:Class="Servicios.Views.PerfilCliente">
+    <ContentPage.Content>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+        </Grid>
+    </ContentPage.Content>
+</ContentPage>
