--- a/Servicios/Servicios/Views/PerfilCliente.xaml
+++ b/Servicios/Servicios/Views/PerfilCliente.xaml
@@ -4,12 +4,43 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Servicios.Views.PerfilCliente">
-    <ContentPage.Content>
-        <Grid>
+             x:Class="Servicios.Views.PerfilCliente"
+             Title="Mi perfil"
+             
+             
+             
+             >
+    <ContentPage.ToolbarItems >
+        
+        <ToolbarItem Text="icono"/>
+    </ContentPage.ToolbarItems>
+    
+    <ContentPage.Content >
+        
+        <Grid RowSpacing="15">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="9*" />
+                <ColumnDefinition Width="0.5*" />
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                <BoxView WidthRequest="115" HeightRequest="115" Color="Blue"/>
+                <StackLayout Spacing="0">
+                    <Label Text="Nombre del usuario" />
+                    <Label Text="Telefono" />
+                    <Label Text="Correo electronico" />
+                    <Label Text="Direccion Particular" />
+                </StackLayout>
+            </StackLayout>
+            <Button Grid.Row="1"  Grid.Column="1"   Text="Editar" HorizontalOptions="End"/>
+            <BoxView Grid.Row="2"  Grid.Column="1" HorizontalOptions="FillAndExpand" HeightRequest="3" Color="#30B9B9B9"/>
+            <Button Grid.Row="3"  Grid.Column="1" Text="Mis Direcciones" HorizontalOptions="StartAndExpand" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
