--- a/Servicios/Servicios/Views/Inicio.xaml
+++ b/Servicios/Servicios/Views/Inicio.xaml
@@ -7,7 +7,7 @@
              x:Class="Servicios.Views.Inicio">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Aplicacion X!"
+            <Label Text="Aplicacion!"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" Margin="0,30,0,0" 
                    FontAttributes="Bold"
