--- a/Servicios/Servicios/Views/Login.xaml
+++ b/Servicios/Servicios/Views/Login.xaml
@@ -7,7 +7,7 @@
              x:Class="Servicios.Views.Login">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Iniciar sesion"
+            <Label Text="Iniciar sesión"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" Margin="0,30,0,0" 
                    FontAttributes="Bold"
@@ -16,9 +16,9 @@
                     Padding="0,0,0,100"/>
             <Entry x:Name="usuario" Placeholder="Numero de celular" Margin="20,10,20,0" Keyboard="Numeric"/>
             <Entry x:Name="password" Placeholder="Contraseña" IsPassword="True"  Margin="20,10,20,0"/>
-            <Button Text="Entrar" HorizontalOptions="Fill" BackgroundColor="#319E31" Margin="20,20,20,0"
+            <Button Text="Entrar" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,20,20,0"
                    Clicked="entrar" />
-            <Button Text="¿Necesitas una cuenta?" HorizontalOptions="Fill" BackgroundColor="#5A9E5A" Margin="20,10,20,0"
+            <Button Text="¿Necesitas una cuenta?" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,10,20,0"
                   Clicked="registro"  />
             
         </StackLayout>
