--- a/Servicios/Servicios/Views/Inicio.xaml
+++ b/Servicios/Servicios/Views/Inicio.xaml
@@ -18,12 +18,15 @@
                    />
             <Button Text="imagen!" Margin="100,50,100,0"
                     Padding="0,0,0,100"/>
+            
             <Button Text="INICIAR SESIÓN" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,30,20,0"
                    Clicked="Button_Clicked" />
+            
             <Button Text="RECUPERAR CLAVE" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,10,20,0"
                     />
             <Button Text="REGISTRARSE" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,10,20,0"
-                   Clicked="registro" />
+                   Clicked="Registro" />
+            
             <Label Text="Contáctanos" FontAttributes="Italic" TextColor="Blue" TextDecorations="Underline" Margin="0,10,0,0" HorizontalOptions="Center" HorizontalTextAlignment="Center"  />
             <Label Text="Al registrarte estás de acuerdo con los Términos de servicio y Políticas de Privacidad" FontAttributes="Italic"  Margin="40,20,40,0" MaxLines="3" VerticalTextAlignment="Center" HorizontalOptions="Center" HorizontalTextAlignment="Center"  />
             
