--- a/Servicios/Servicios/Views/Recuperar.xaml
+++ b/Servicios/Servicios/Views/Recuperar.xaml
@@ -4,7 +4,9 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Servicios.Views.Recuperar">
+             x:Class="Servicios.Views.Recuperar"
+             NavigationPage.HasNavigationBar="False"
+             >
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Recuperar clave"
