--- a/Servicios/Servicios/TabbFix.xaml
+++ b/Servicios/Servicios/TabbFix.xaml
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<Shell xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             
+             xmlns:local="clr-namespace:Servicios.Views"
              mc:Ignorable="d"
              x:Class="Servicios.TabbFix">
-  <!--Pages can be added as references or inline-->
-  <ContentPage Title="Tab 1" />
-  <ContentPage Title="Tab 2" />
-  <ContentPage Title="Tab 3" />
-</TabbedPage>
+    <local:AboutPage Title="titulo"/>
+    <local:Inicio Title="titulo 2"/>
+    <local:PerfilCliente Title="titulo 3"/>
+</Shell>
