--- a/Servicios/Servicios/Views/PerfilCliente.xaml
+++ b/Servicios/Servicios/Views/PerfilCliente.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d"
              x:Class="Servicios.Views.PerfilCliente"
              Title="Mi perfil"
+            
              >
     
     <ContentPage.ToolbarItems >
@@ -30,7 +31,8 @@
             </Grid.RowDefinitions>
             
             <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
-                <BoxView Margin="0,30,0,0" WidthRequest="115" HeightRequest="115" Color="DeepSkyBlue"/>
+                <Image  Margin="0,30,0,0" Source="ImagenPrincipal.png" Aspect="AspectFit"
+                    WidthRequest="115"/>
 
                 <StackLayout Spacing="10" Margin="20,30,0,0" >
                     <Label Text="Nombre del usuario" />
