--- a/Servicios/Servicios/Views/Recuperar.xaml
+++ b/Servicios/Servicios/Views/Recuperar.xaml
@@ -14,8 +14,8 @@
                 HorizontalOptions="Center" Margin="0,30,0,0" 
                    FontAttributes="Bold"
                    />
-            <Button Text="imagen!" Margin="100,50,100,0"
-                    Padding="0,0,0,100"/>
+            <Image  Margin="100,50,100,0" Source="ImagenPrincipal.png" Aspect="AspectFit"
+                    WidthRequest="200"/>
             <Entry x:Name="usuario" Placeholder="Numero de celular"  Margin="20,10,20,0" Keyboard="Numeric"/>
             <Button Text="Enviar" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,20,20,0"
                    />
