--- a/Servicios/Servicios/Views/Recuperar.xaml
+++ b/Servicios/Servicios/Views/Recuperar.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d"
              x:Class="Servicios.Views.Recuperar"
              NavigationPage.HasNavigationBar="False"
+             BackgroundImageSource="Principal.jpg"
              >
     <ContentPage.Content>
         <StackLayout>
@@ -13,10 +14,11 @@
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" Margin="0,30,0,0" 
                    FontAttributes="Bold"
+                   TextColor="White" 
                    />
             <Image  Margin="100,50,100,0" Source="ImagenPrincipal.png" Aspect="AspectFit"
                     WidthRequest="200"/>
-            <Entry x:Name="usuario" Placeholder="Numero de celular"  Margin="20,10,20,0" Keyboard="Numeric"/>
+            <Entry x:Name="usuario" Placeholder="Numero de celular"  Margin="20,10,20,0" Keyboard="Numeric" TextColor="White" PlaceholderColor="White"/>
             <Button Text="Enviar" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,20,20,0"
                    />
             <Button Text="¿Necesitas una cuenta?" TextColor="White" HorizontalOptions="Fill" BackgroundColor="#0fabbc" Margin="20,50,20,0"
